# whisper

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/cli/: commands.rs  mod.rs
src/crypto/: encrypt.rs  keys.rs  mod.rs
src/identity/: contacts.rs  keypair.rs  mod.rs
src/message/: mod.rs  queue.rs  sync.rs  types.rs
src/network/: behaviour.rs  discovery.rs  mod.rs  node.rs  relay.rs
src/storage/: db.rs  encryption.rs  mod.rs  schema.rs  schema.sql
src/ui/: app.rs  input.rs  mod.rs  views.rs
tests/: integration_test.rs  network_test.rs
