[package]
name = "whisper"
version = "0.1.0"
edition = "2021"
authors = ["Katie"]
description = "Decentralized peer-to-peer messaging. No servers. No tracking."
license = "MIT"
repository = "https://github.com/sudokatie/whisper"
readme = "README.md"
keywords = ["p2p", "messaging", "encryption", "decentralized", "libp2p"]
categories = ["network-programming", "cryptography"]

[dependencies]
# P2P Networking
libp2p = { version = "0.54", features = ["tcp", "noise", "yamux", "mdns", "kad", "request-response", "relay", "tokio", "macros"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Cryptography
sodiumoxide = "0.2"
argon2 = "0.5"
rand = "0.8"
hex = "0.4"

# Database (SQLCipher for encryption at rest)
rusqlite = { version = "0.32", features = ["bundled-sqlcipher"] }

# Terminal UI
ratatui = "0.28"
crossterm = "0.28"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
base64 = "0.22"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
thiserror = "2"
dirs = "5"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3.31"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "whisper"
path = "src/main.rs"

[lib]
name = "whisper"
path = "src/lib.rs"
